# AI-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml
agent/: agent_main.py  middleware.py
agent/tools/: agent_tools.py  mcp_adapter.py
chroma_db/: chroma.sqlite3
config/: model.py
logs/: 2026-02-04.json  2026-02-05.json  2026-02-06.json  2026-02-09.json  2026-03-02.json  2026-03-06.json
model/: factory.py
rag/: rag_service.py  vector_store.py
routers/: agent_api.py  chat_api.py
services/: agent_service.py  chat_service.py
utils/: ali_token.py  logger.py  models.py
